@@ -31,8 +31,8 @@ The available options are:
 Show the version and commandline option help.
 .TP
 .B \-c\fI cfgfile
-Set the config file with settings for unbound to read instead of the 
-file at default location /usr/local/etc/unbound/unbound.conf. The syntax is
+Set the config file with settings for unbound to read instead of reading the 
+file at the default location, @ub_conf_file@. The syntax is
 described in \fIunbound.conf\fR(5).
 .TP
 .B \-d
